--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -24,13 +24,14 @@ Andr\'e Wobst \href{mailto:wobsta@users.sourceforge.net}{\url{<wobsta@users.sour
 \include{intro}
 \include{unit}
 \include{path}
-\include{trafo} 
+\include{trafo}
 \include{canvas}
+\include{text}
 \include{epsfile}
-\include{tex}
 \include{color}
 \include{datafile}
 \include{graph}
+\include{tex}
 \appendix
 \include{mathtree}
 \include{colorname}
