--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -1,4 +1,4 @@
-\documentclass{scrreprt}
+\documentclass[dvips]{scrreprt}
 \usepackage{pyx,tabularx,graphicx}
 \usepackage[latin1]{inputenc}
 \usepackage{url}
@@ -27,9 +27,10 @@ Andr\'e Wobst \href{mailto:wobsta@users.sourceforge.net}{\url{<wobsta@users.sour
 \include{trafo}
 \include{canvas}
 \include{text}
+\include{box}
 \include{epsfile}
 \include{color}
-\include{datafile}
+\include{data}
 \include{graph}
 \include{tex}
 \appendix
